app/tests/snapshots/snapshots__dry_run.snap
---
source: app/tests/snapshots.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
[dry run] no changes will be made

[dry run] Creating directory somedir: 1 step(s) would run
