app/tests/snapshots/snapshots__help.snap
---
source: app/tests/snapshots.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
Declarative configuration management for personal workstations.

Usage: etch [OPTIONS] <COMMAND>

Commands:
  apply            Apply manifests
  status           List manifests status (ALPHA)
  version          Print version information
  contexts         List available contexts
  gen-completions  Auto generate completions
  update           Update installed tools and packages
  help             Print this message or the help of the given subcommand(s)

Options:
  -d, --manifest-directory <MANIFEST_DIRECTORY>
          
  -c, --config-path <CONFIG_PATH>
          Specify a configuration path (if invalid etch will exit)
      --no-color
          Disable color printing
  -D, --defines <DEFINES>
          
  -v...
          Debug & tracing mode (-v, -vv)
  -h, --help
          Print help
  -V, --version
          Print version
