app/tests/snapshots/snapshots__version.snap
---
source: app/tests/snapshots.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
[VERSION]
